--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primary_color">#212121</color>
+    <color name="primary_dark_color">#000000</color>
+    <color name="accent_color">#484848</color>
+    <color name="ripple_color">#40FFFFFF</color>
+    <color name="number_background_color">#212121</color>
+    <color name="delete_image_background">#302527</color>
+    <color name="lock_icon_color">#31CAB8</color>
 </resources>
